--- a/Awesome/Resource/Storyboards/Home.storyboard
+++ b/Awesome/Resource/Storyboards/Home.storyboard
@@ -1,28 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17150" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17122"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GmarketSansTTFBold.ttf">
+            <string>GmarketSansTTFBold</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--HomeVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeVC" id="Y6W-OH-hqX" customClass="HomeVC" customModule="Awesome" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iDd-ux-ckw">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="none" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebB-FF-ctj">
+                                        <rect key="frame" x="45" y="45" width="38" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="none" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ea2-FY-yjl">
+                                        <rect key="frame" x="45" y="20" width="66.5" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="N3l-Xu-zU4"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="GmarketSansTTFBold" family="Gmarket Sans TTF" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qtX-NU-Lx8">
+                                        <rect key="frame" x="260" y="5" width="70" height="70"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="70" id="H47-co-7Nb"/>
+                                            <constraint firstAttribute="width" constant="70" id="THq-kh-7f1"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="noImage"/>
+                                        <connections>
+                                            <action selector="settingButtonClicked:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Jx9-fY-uGU"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="ea2-FY-yjl" firstAttribute="leading" secondItem="iDd-ux-ckw" secondAttribute="leading" constant="45" id="2P3-d8-GfV"/>
+                                    <constraint firstItem="ebB-FF-ctj" firstAttribute="top" secondItem="ea2-FY-yjl" secondAttribute="bottom" id="4Vo-Ae-wS5"/>
+                                    <constraint firstAttribute="height" constant="100" id="Bea-kC-Nfp"/>
+                                    <constraint firstAttribute="trailing" secondItem="qtX-NU-Lx8" secondAttribute="trailing" constant="45" id="VNa-II-9cq"/>
+                                    <constraint firstItem="ea2-FY-yjl" firstAttribute="top" secondItem="iDd-ux-ckw" secondAttribute="top" constant="20" id="YVq-fo-qXm"/>
+                                    <constraint firstItem="ebB-FF-ctj" firstAttribute="leading" secondItem="iDd-ux-ckw" secondAttribute="leading" constant="45" id="hyZ-mA-5Af"/>
+                                    <constraint firstItem="qtX-NU-Lx8" firstAttribute="top" secondItem="iDd-ux-ckw" secondAttribute="top" constant="5" id="kSx-Gj-lZ5"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zii-GF-mPJ">
+                                <rect key="frame" x="35" y="100" width="305" height="567"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvs-uA-UuQ">
+                                <rect key="frame" x="296" y="603" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="G9e-hN-9ha"/>
+                                    <constraint firstAttribute="width" constant="64" id="S1O-aF-QzM"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="calanderButton"/>
+                                <connections>
+                                    <action selector="calendarButtonClicked:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="3AI-mi-ZrW"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="zii-GF-mPJ" secondAttribute="bottom" id="902-X6-w41"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zii-GF-mPJ" secondAttribute="trailing" constant="35" id="BTf-s3-f7t"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="cvs-uA-UuQ" secondAttribute="bottom" id="EAB-Yj-LfM"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="iDd-ux-ckw" secondAttribute="trailing" id="GCy-uF-W9Y"/>
+                            <constraint firstItem="cvs-uA-UuQ" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" constant="-15" id="Hjk-H5-P9p"/>
+                            <constraint firstItem="zii-GF-mPJ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="35" id="Kg6-w8-r59"/>
+                            <constraint firstItem="iDd-ux-ckw" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="ZL5-Xl-Ptf"/>
+                            <constraint firstItem="iDd-ux-ckw" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="sLx-ke-gp2"/>
+                            <constraint firstItem="zii-GF-mPJ" firstAttribute="top" secondItem="iDd-ux-ckw" secondAttribute="bottom" id="zSo-V0-ZQS"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="headerView" destination="iDd-ux-ckw" id="lMJ-XI-HM3"/>
+                        <outlet property="hiAwesomeLabel" destination="ebB-FF-ctj" id="8Kx-55-LZO"/>
+                        <outlet property="homeView" destination="5EZ-qb-Rvc" id="qUg-qx-cQr"/>
+                        <outlet property="nameLabel" destination="ea2-FY-yjl" id="jur-pR-aHM"/>
+                        <outlet property="settingButton" destination="qtX-NU-Lx8" id="RaG-Wh-Acj"/>
+                        <outlet property="tableView" destination="zii-GF-mPJ" id="pSD-7d-hcT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="119"/>
         </scene>
     </scenes>
     <resources>
+        <image name="calanderButton" width="72" height="72"/>
+        <image name="noImage" width="64" height="64"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
