[FIX] 셀 선택 안되던 오류 수정

--- a/Awesome/Resource/Storyboards/Home.storyboard
+++ b/Awesome/Resource/Storyboards/Home.storyboard
@@ -62,7 +62,7 @@
                                     <constraint firstItem="qtX-NU-Lx8" firstAttribute="top" secondItem="iDd-ux-ckw" secondAttribute="top" constant="5" id="kSx-Gj-lZ5"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zii-GF-mPJ">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zii-GF-mPJ">
                                 <rect key="frame" x="35" y="100" width="305" height="567"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
