--- a/Awesome/Resource/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/Awesome/Resource/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -1,44 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
-                <viewController modalTransitionStyle="partialCurl" id="01J-lp-oVM" sceneMemberID="viewController">
+                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="ZQ1-sJ-zKF">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="Psv-Ts-f6F">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.47058823529411764" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ZQ1-sJ-zKF" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="EMw-5f-eBL"/>
-                            <constraint firstItem="ZQ1-sJ-zKF" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="M5x-QH-uhO"/>
-                            <constraint firstAttribute="trailing" secondItem="ZQ1-sJ-zKF" secondAttribute="trailing" id="f0x-dH-MGz"/>
-                            <constraint firstAttribute="bottom" secondItem="ZQ1-sJ-zKF" secondAttribute="bottom" id="tcm-r5-vmD"/>
+                            <constraint firstAttribute="bottom" secondItem="Psv-Ts-f6F" secondAttribute="bottom" id="9Pl-Eu-tBO"/>
+                            <constraint firstItem="Psv-Ts-f6F" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="TPA-Sd-NAB"/>
+                            <constraint firstItem="Psv-Ts-f6F" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mSF-5J-26g"/>
+                            <constraint firstItem="Psv-Ts-f6F" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="ujp-O2-2w7"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
         <image name="splash" width="375" height="812"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
