--- a/Awesome/Resource/Storyboards/ScheduleDetail.storyboard
+++ b/Awesome/Resource/Storyboards/ScheduleDetail.storyboard
@@ -30,7 +30,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="약속이 도착했습니다!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UI0-gh-TU3">
                                         <rect key="frame" x="57" y="20" width="300" height="24"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="300" id="mrq-Dg-vjL"/>
+                                            <constraint firstAttribute="width" constant="300" id="4LS-3o-BiC"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="24"/>
                                         <nil key="textColor"/>
@@ -139,6 +139,7 @@
                                     <constraint firstItem="SY8-3z-Gmn" firstAttribute="top" secondItem="ARq-oV-VUY" secondAttribute="bottom" constant="10" id="03p-gd-VRd"/>
                                     <constraint firstItem="ARq-oV-VUY" firstAttribute="top" secondItem="G9M-JK-ECa" secondAttribute="bottom" constant="10" id="0jf-xg-EdA"/>
                                     <constraint firstAttribute="width" secondItem="KNB-DS-tbM" secondAttribute="height" multiplier="3:4" id="3cA-94-hKU"/>
+                                    <constraint firstItem="IV2-wX-TZw" firstAttribute="trailing" secondItem="UI0-gh-TU3" secondAttribute="trailing" id="9eG-Qn-lko"/>
                                     <constraint firstItem="SY8-3z-Gmn" firstAttribute="trailing" secondItem="UI0-gh-TU3" secondAttribute="trailing" id="A4Y-60-g6S"/>
                                     <constraint firstItem="tet-dS-TEX" firstAttribute="leading" secondItem="UI0-gh-TU3" secondAttribute="leading" id="BPs-dd-nSe"/>
                                     <constraint firstItem="2Az-Lm-ukn" firstAttribute="top" secondItem="UI0-gh-TU3" secondAttribute="bottom" constant="5" id="I77-KS-Etd"/>
@@ -158,6 +159,7 @@
                                     <constraint firstItem="UI0-gh-TU3" firstAttribute="centerX" secondItem="KNB-DS-tbM" secondAttribute="centerX" id="o53-i1-SSO"/>
                                     <constraint firstItem="G9M-JK-ECa" firstAttribute="trailing" secondItem="UI0-gh-TU3" secondAttribute="trailing" id="pfM-Aj-yXp"/>
                                     <constraint firstItem="IV2-wX-TZw" firstAttribute="leading" secondItem="Ypq-Gs-BBZ" secondAttribute="trailing" constant="10" id="pjq-N8-iHd"/>
+                                    <constraint firstItem="Ypq-Gs-BBZ" firstAttribute="leading" secondItem="UI0-gh-TU3" secondAttribute="leading" id="q6f-ds-aX9"/>
                                     <constraint firstAttribute="trailing" secondItem="2Az-Lm-ukn" secondAttribute="trailing" constant="40" id="zIo-Ua-6kB"/>
                                 </constraints>
                             </view>
@@ -166,8 +168,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="KNB-DS-tbM" secondAttribute="bottom" id="19m-zY-FKr"/>
-                            <constraint firstItem="KNB-DS-tbM" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="B3Q-YV-mOX"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KNB-DS-tbM" secondAttribute="trailing" id="Z4K-Os-fCg"/>
+                            <constraint firstItem="KNB-DS-tbM" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="B3Q-YV-mOX"/>
+                            <constraint firstAttribute="trailing" secondItem="KNB-DS-tbM" secondAttribute="trailing" id="Z4K-Os-fCg"/>
                             <constraint firstItem="KNB-DS-tbM" firstAttribute="width" secondItem="KNB-DS-tbM" secondAttribute="height" multiplier="3:4" id="oPF-aj-oTN"/>
                         </constraints>
                     </view>
@@ -176,7 +178,7 @@
                         <outlet property="backgroundView" destination="KNB-DS-tbM" id="2vp-iT-U19"/>
                         <outlet property="denineButton" destination="SY8-3z-Gmn" id="5zF-Tm-H2c"/>
                         <outlet property="headerLabel" destination="UI0-gh-TU3" id="x2W-rj-EUS"/>
-                        <outlet property="headerLabelConstraint" destination="mrq-Dg-vjL" id="91j-eg-3i9"/>
+                        <outlet property="headerLabelConstraint" destination="4LS-3o-BiC" id="fbn-99-h0k"/>
                         <outlet property="nameLabel" destination="tet-dS-TEX" id="J73-rc-aLp"/>
                         <outlet property="nameView" destination="Ypq-Gs-BBZ" id="ATS-MA-28W"/>
                         <outlet property="promiseObject" destination="0aA-bz-e9D" id="1HF-2q-dSk"/>
