--- a/Awesome/Resource/Storyboards/AddSchedule.storyboard
+++ b/Awesome/Resource/Storyboards/AddSchedule.storyboard
@@ -28,7 +28,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PUn-LV-4D5">
-                                        <rect key="frame" x="0.0" y="365" width="414" height="497"/>
+                                        <rect key="frame" x="0.0" y="399" width="414" height="497"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5MD-ea-pfX">
                                                 <rect key="frame" x="40" y="227.5" width="334" height="50"/>
@@ -122,13 +122,23 @@
                                             <constraint firstAttribute="trailing" secondItem="6HQ-oT-D01" secondAttribute="trailing" constant="30" id="xKh-Ij-Y4A"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XKJ-dZ-V58">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="399"/>
+                                        <connections>
+                                            <action selector="tapButtonClicked:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Bpl-Tl-Gcj"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <viewLayoutGuide key="safeArea" id="vlM-6w-pdl"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="vlM-6w-pdl" firstAttribute="bottom" secondItem="PUn-LV-4D5" secondAttribute="bottom" id="aGG-ax-iKh"/>
+                                    <constraint firstItem="XKJ-dZ-V58" firstAttribute="top" secondItem="eLE-G0-Rq8" secondAttribute="top" id="3uI-V9-wpG"/>
+                                    <constraint firstItem="PUn-LV-4D5" firstAttribute="top" secondItem="XKJ-dZ-V58" secondAttribute="bottom" id="Hjt-5n-BRQ"/>
+                                    <constraint firstItem="vlM-6w-pdl" firstAttribute="trailing" secondItem="XKJ-dZ-V58" secondAttribute="trailing" id="OiD-dY-T3W"/>
+                                    <constraint firstAttribute="bottom" secondItem="PUn-LV-4D5" secondAttribute="bottom" id="aGG-ax-iKh"/>
                                     <constraint firstItem="PUn-LV-4D5" firstAttribute="leading" secondItem="vlM-6w-pdl" secondAttribute="leading" id="cYg-DF-Jse"/>
                                     <constraint firstItem="PUn-LV-4D5" firstAttribute="trailing" secondItem="vlM-6w-pdl" secondAttribute="trailing" id="jfq-tb-s9p"/>
+                                    <constraint firstItem="XKJ-dZ-V58" firstAttribute="leading" secondItem="vlM-6w-pdl" secondAttribute="leading" id="r5Z-B4-huF"/>
                                 </constraints>
                             </view>
                         </subviews>
